fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -89,16 +89,20 @@ html{
     background: #FDF7F2;
 }
 
-.intro{
-    padding: 250px 100px;
-    text-align: justify;
+.color-me {
+    background-color: red;
 }
+.intro{
+    padding-top: 250px;
+    padding-right:20px;
+    padding-left:100px;
+}
+
 #intro-name{
     color: black;
-    text-align: left;
     font-family: 'IBM Plex Sans';
     font-weight: bolder;
-    font-size: 70px;
+    font-size: 60px;
 }
 
 .underline{
@@ -117,8 +121,8 @@ h3{
 .about .container{
     display: flex;
     padding:40px;
-    padding-top:120px;
-    padding-bottom: 85px;
+    padding-top:200px;
+    padding-bottom: 200px;
     position: relative; 
 }
 .about-intro{
@@ -196,7 +200,7 @@ a:hover{
 /*PROJECTS*/
 
 .card{
-    height: 400px;
+    height: 350px;
     border-radius: 3px;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.18);
     background-color:#EADECF;
@@ -215,7 +219,7 @@ a:hover{
 }
 
 .card .more {
-    background-image: url("images/right-arrow.svg");
+    background-image: url("imgs/right-arrow.svg");
     opacity:90%;
     background-size: 28px;
     background-repeat: no-repeat;
@@ -254,7 +258,6 @@ a:hover{
 
 .proj-info{
     text-align: left;
-    text-align: justify;
 }
 
 .card .mouse-gif{
@@ -264,16 +267,17 @@ a:hover{
     width: auto;
     padding: 10px 10px;
 }
+
 .trio{
     display: block;
     margin: 0 auto;
     height: 400px;
     padding: 20px 20px;
 }
+
 .vga{
     height:300px;
 }
-
 
 .proj-img{
     display: block;
@@ -294,6 +298,7 @@ a:hover{
     padding: 10px 10px;
     padding-top: 70px;
 }
+
 .proj-page .proj-desc{
     color: black;
     text-align: center;
@@ -348,6 +353,11 @@ body.night .underline{
     h3{
         font-size: 32px;
         text-align: center;
+    }
+
+    .intro{
+        padding-right: 40px;
+        padding-left: 40px;
     }
 
 }
